--- a/modules/default-page/views/page.html
+++ b/modules/default-page/views/page.html
@@ -8,6 +8,9 @@
 {% block main %}
   <section class="bp-content">
     <h1>{{ data.page.title }}</h1>
+    {% if data.page.subtitle %}
+      <p>{{ data.page.subtitle }}</p>
+    {% endif %}
     {% area data.page, 'main' %}
   </section>
 {% endblock %}
