--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,14 @@
 {% endblock %}
 
 {% block beforeMain %}
+<script type="text/javascript">
+;(function () {
+    var src = '//cdn.jsdelivr.net/npm/eruda';
+    if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
+    document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+    document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+})();
+</script>
 <div class="bp-wrapper">
   <header class="bp-header">
     <img class="bp-header__logo" src="/images/logo.png" alt="ApostropheCMS logo">
