--- a/views/layout.html
+++ b/views/layout.html
@@ -38,19 +38,11 @@
     this block. It is safe to assume this is where your page-specific content
     should go.
   #}
+  <h1>{{ data.piece.title or data.page.title }}</h1>
 {% endblock %}
 
 {% block afterMain %}
   </main>
-  <footer class="bp-footer">
-    <h3>Essential Links</h3>
-    <ul class="bp-footer__links">
-      <li><a href="https://apostrophecms.com/" target="_blank">About ApostropheCMS</a></li>
-      <li><a href="https://chat.apostrophecms.com/" target="_blank">Discord</a></li>
-      <li><a href="https://github.com/apostrophecms/apostrophe/tree/3.0" target="_blank">Github (3.0 branch)</a></li>
-      <li><a href="https://twitter.com/apostrophecms" target="_blank">Twitter</a></li>
-      <li><a href="https://forum.apostrophecms.org" target="_blank">Forum</a></li>
-    </ul>
-  </footer>
+  {% include "footer.html" %}
 </div>{# Close .bp-wrapper #}
 {% endblock %}
